# CDCL_solver

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build-test.yml
solver/include/: CNF.h  solver.h  utils.h
solver/src/: CNF.cpp  solver.cpp
src/: dimacs_parser.cpp  dimacs_parser.h  main.cpp
tests/: doctest.h  solver_tests.cpp
tests/SATLIB/: config.py  config_ci.py  test_runner.py
